# sk-align

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: generate_reference.py
src/sk_align/: __init__.py  aligner.py  fst.py  graph.py  k2_decoder.py  kaldi_io.py  mfcc.py  nnet3_model.py  nnet3_torch.py  transition_model.py  tree.py  viterbi.py  word_align.py
tests/: conftest.py  test_io.py  test_k2_decoder.py  test_mfcc.py  test_parity.py  test_viewable.py  test_viterbi.py
tests/reference_data/m001rmb0/: alignment.npy  audio.npy  expected_loglikes_output.json  expected_output.json  metadata.json  mfcc_features.npy  word_alignment.json
tests/reference_data/p0f0jy4n/: alignment.npy  audio.npy  expected_output.json  metadata.json  mfcc_features.npy  word_alignment.json
